headlamp/httproute.yaml
---
{
  apiVersion: "gateway.networking.k8s.io/v1",
  kind: "HTTPRoute",
  metadata: {
    name: "headlamp",
  },
  spec: {
    parentRefs: [{
      name: "gateway",
      namespace: "gateway",
    }],
    hostnames: [
      "headlamp.junjie.pro",
    ],
    rules: [{
      backendRefs: [{
        name: "headlamp",
        port: 80,
      }],
    }],
  },
}
